--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   </section>
 
   <footer class="py4 px-responsive">
-    <p class="mb4"><a href="" class="f5 caps button button-outline">View on Github</a></p>
+    <p class="mb4"><a href="//github.com/jxnblk/papercraft" class="f5 caps button button-outline">View on Github</a></p>
     <p class="f5 caps">Hand-coded with love by <a href="//jxnblk.com">Jxnblk</a></p>
   </footer>
 
